--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
+{% comment %} {% load review_filters %} {% endcomment %}
+{% comment %} {% if has_reviewed %} {% endcomment %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,30 +14,55 @@
 <body>
     
     <h2>{{ book.name }}</h2>
+    {% comment %} <img src="{{ MEDIA_URL }}{{ book.cover_page.url }}" alt="Cover image"> {% endcomment %}
     <img src="{{ book.cover_page.url }}" alt="Cover image">
     <p><strong>Author:</strong> {{ book.author }}</p>
     <p><strong>Genre:</strong> {{ book.genre }}</p>
     <p><strong>Published Date:</strong> {{ book.published_date }}</p>
     <p><strong>Description:</strong> {{ book.description }}</p>
 
-    <h3>Reviews</h3> 
-    {% for review in book.reviews.all %}
-        <div>
-            <strong>{{ review.user.username }}:</strong>
-            <p>Rating: {{ review.rating }}</p>
-            <p>{{ review.comment }}</p>
-        </div>
-    {% empty %}
-        <p>No reviews yet.</p>
-    {% endfor %}
+    <h2>Reviews</h2>
+{% for review in reviews %}
+    <div class="review">
+        <p><strong>{{ review.user.username }}</strong></p>
+        <p>Rating: 
+            {% for i in "*****" %}
+                {% if forloop.counter0 < review.rating %}
+                    <span>&#x2605;</span>  <!-- filled star -->
+                {% else %}
+                    <span>&#x2606;</span>  <!-- empty star -->
+                {% endif %}
+            {% endfor %}
+        </p>
+        <p>{{ review.comment }}</p>
+        <p>Posted on: {{ review.created_at }}</p>
+        {% if review.user == request.user %}
+        <p>
+            <button type="submit" style="background-color:#4cae4c; color: white; padding: 10px 20px; border: none; border-radius: 5px;">
+              <a href="{% url 'add_review' id=review.id %}" >Edit Review</a>
+            </button>
+          </p>
+        {% endif %}
+    </div>
+{% empty %}
+    <p>No reviews yet.</p>
+{% endfor %}
 
-    <h3>Add a Review</h3>
-    <form method="post">
-        {% csrf_token %}
-        {{ review_form.as_p }}
-        <button type="submit">Submit Review</button>
-    </form>
-    {% endblock %}
-</body>
-</html>
+{% if request.user.is_authenticated %}
+    {% comment %} {% if not has_reviewed %} {% endcomment %}
+        <h3>Submit a Review</h3>
+        <form action="{% url 'add_review' id=book.id %}" method="get">
+            <button type="submit" style="background-color:#4cae4c; ; color: white; padding: 10px 20px; border: none; border-radius: 5px;">
+            Add Review</button>
+        </form> 
+    {% else %}
+    {% if has_reviewed %}
+        <p>Review submitted. Thank you!</p>
+    {% endif %}
+    {% endif %}
+    {% if not has_reviewed %}
 
+    <p><a href="{% url 'login' %}">Login</a> to submit a review.</p>
+{% comment %} {% endif %} {% endcomment %}
+    {% endif %}
+{% endblock %}
