fix edit review and add price of book

--- a/book/templates/book/book_detail.html
+++ b/book/templates/book/book_detail.html
@@ -14,11 +14,15 @@
 <body>
     
     <h2>{{ book.name }}</h2>
-    {% comment %} <img src="{{ MEDIA_URL }}{{ book.cover_page.url }}" alt="Cover image"> {% endcomment %}
     <img src="{{ book.cover_page.url }}" alt="Cover image">
+    {% comment %} <img src="{{ MEDIA_URL }}{{ book.cover_page.url }}" alt="Cover image"> {% endcomment %}
+    {% comment %} <img src="{{ book.cover_page.url }}" alt="Cover image"> {% endcomment %}
+    {% comment %} <img src="model.cover_page.url" alt="Cover image"> {% endcomment %}
+
     <p><strong>Author:</strong> {{ book.author }}</p>
     <p><strong>Genre:</strong> {{ book.genre }}</p>
     <p><strong>Published Date:</strong> {{ book.published_date }}</p>
+    <p><strong>Price:</strong> {{ book.price }}</p>
     <p><strong>Description:</strong> {{ book.description }}</p>
 
     <h2>Reviews</h2>
@@ -39,7 +43,7 @@
         {% if review.user == request.user %}
         <p>
             <button type="submit" style="background-color:#4cae4c; color: white; padding: 10px 20px; border: none; border-radius: 5px;">
-              <a href="{% url 'add_review' id=review.id %}" >Edit Review</a>
+              <a href="{% url 'edit_review' review_id=book.id %}" >Edit Review</a>
             </button>
           </p>
         {% endif %}
@@ -47,7 +51,7 @@
 {% empty %}
     <p>No reviews yet.</p>
 {% endfor %}
-
+{% if not has_reviewed %}
 {% if request.user.is_authenticated %}
     {% comment %} {% if not has_reviewed %} {% endcomment %}
         <h3>Submit a Review</h3>
@@ -56,13 +60,13 @@
             Add Review</button>
         </form> 
     {% else %}
+    <p><a href="{% url 'login' %}" class="text-blue-600 hover:underline">Login</a> to submit a review.</p>
+  
+    {% endif %}
+
     {% if has_reviewed %}
         <p>Review submitted. Thank you!</p>
     {% endif %}
     {% endif %}
-    {% if not has_reviewed %}
-
-    <p><a href="{% url 'login' %}">Login</a> to submit a review.</p>
-{% comment %} {% endif %} {% endcomment %}
-    {% endif %}
+    
 {% endblock %}
