--- a/book/templates/book/add_review.html
+++ b/book/templates/book/add_review.html
@@ -18,6 +18,6 @@
     <textarea id="comment" name="comment" rows="5" cols="30" required></textarea><br><br>
     <button type="submit">Submit</button>
       {% if has_reviewed %} 
-        <p>Review already submitted. You can <a href="{% url 'add_review' id=book.id %}">edit your review</a> instead.</p>
+        <p>Review already submitted. You can <a href="{% url 'edit_review' review_id=book.id %}">edit your review</a> instead.</p>
     {%endif%}
 </form>
