--- a/book/templates/book/edit_review.html
+++ b/book/templates/book/edit_review.html
@@ -1,10 +1,19 @@
 {% extends "base.html" %}
-{% load static %}
 {% block content %}
     <h1>Edit Review</h1>
     <form method="post">
         {% csrf_token %}
-        {{ review.as_p }}
+        
+        <label for="rating">Rating:</label>
+        <select id="rating" name="rating" required>
+            {% for i in "12345" %}
+                <option value="{{ i }}" {% if i|stringformat:"s" == review.rating|stringformat:"s" %}selected{% endif %}>{{ i }}</option>
+            {% endfor %}
+        </select><br><br>
+        
+        <label for="comment">Comment:</label>
+        <textarea id="comment" name="comment" rows="5" cols="30" required>{{ review.comment }}</textarea><br><br>
+        
         <button type="submit">Save Changes</button>
     </form>
 {% endblock %}
