--- a/book/templates/book/add_review.html
+++ b/book/templates/book/add_review.html
@@ -15,7 +15,8 @@
     </select><br><br>
     <label for="comment">Comment:</label>
     <textarea id="comment" name="comment" rows="5" cols="30" required></textarea><br><br>
-    <button type="submit">Submit</button>
+    <button type="submit" style="display: block; padding: 10px; border: 2px ; border-radius: 4px; background-color:#FF4040;
+    color: white; font-size: 16px; cursor: pointer; transition: background-color 0.3s, border-color 0.3s;">Submit</button>
       {% if has_reviewed %} 
         <p>Review already submitted. You can <a href="{% url 'edit_review' review_id=book.id %}">edit your review</a> instead.</p>
     {%endif%}
