--- a/book/templates/base.html
+++ b/book/templates/base.html
@@ -38,7 +38,7 @@
                 <a href="{% url 'about' %}" class="text-white hover:text-gray-300">About Us</a>
                 <div class="relative dropdown">
                     <button class="text-white hover:text-gray-300 focus:outline-none">
-                        Genre
+                        Category
                         <svg class="w-5 h-5 inline ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
                         </svg>
