--- a/book/templates/book/home.html
+++ b/book/templates/book/home.html
@@ -20,13 +20,14 @@
             {% endfor %}
         </ul>
     {% endif %} {% endcomment %}
-    {% if messages %}
+    {% comment %} {% if messages %}
         <div style="position: fixed; top: 10px; right: 10px; padding: 10px; border-radius: 5px; background-color: #dff0d8; color: #3c763d;">
             {% for message in messages %}
                 <p>{{ message }}</p>
             {% endfor %}
         </div>
-    {% endif %}
+    {% endif %} {% endcomment %}
+    
     
     <script>
         document.addEventListener('DOMContentLoaded', function() {
