--- a/book/templates/book/favorite_books.html
+++ b/book/templates/book/favorite_books.html
@@ -15,18 +15,19 @@
 
 
     {% if favorite_books %}
-        <ul style="list-style-type: none; padding: 0;">
-            {% for book in favorite_books %}
-                <li style="border: 1px solid #ddd; padding: 10px; margin-bottom: 10px; border-radius: 5px;">
-                    <h3>{{ book.name }}</h3>
-                    <img src="{{ book.cover_image.url }}" alt="Cover Page" style="max-width: 100px; height: auto;"><br>
-                    <p><strong>Author:</strong> {{ book.author }}</p>
-                    <p><strong>Genre:</strong> {{ book.genre }}</p>
-                    <p><strong>Published Date:</strong> {{ book.published_date }}</p>
-                    <p><a href="{% url 'book_detail' id=book.id %}" style="background-color: #4cae4c; color: white; padding: 5px 10px; text-decoration: none; border-radius: 5px;">View Details</a></p>
-                </li>
-            {% endfor %}
-        </ul>
+    <ul style="list-style-type: none; padding: 0; display: flex; flex-wrap: wrap; gap: 10px;">
+        {% for book in favorite_books %}
+            <li style="border: 1px solid #ddd; padding: 10px; border-radius: 5px; width: 250px; display: flex; flex-direction: column; align-items: center;">
+                <h3 style="text-align: center;">{{ book.name }}</h3>
+                <img src="{{ book.cover_image.url }}" alt="Cover Page" style="max-width: 100px; height: auto;"><br>
+                <p><strong>Author:</strong> {{ book.author }}</p>
+                <p><strong>Genre:</strong> {{ book.genre }}</p>
+                <p><strong>Published Date:</strong> {{ book.published_date }}</p>
+                <p><a href="{% url 'book_detail' id=book.id %}" style="background-color: #4cae4c; color: white; padding: 2px 10px; text-decoration: none; border-radius: 5px;">View Details</a></p>
+            </li>
+        {% endfor %}
+    </ul>
+    
     {% else %}
         <p>You have no favorite books yet.</p>
     {% endif %}
